--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^8.12.2"
+    "mongoose": "^8.12.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.18",
+    "@types/winston": "^2.4.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
