added unit tests to project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "types": [
       "node",
-      "express"
+      "express",
+      "jest"
     ]
   },
   "include": [
