--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 MONGO_URL = mongodb+srv://test:example@testcluster.mongodb.net/
 PORT= 3000
+AWS_ACCESS_KEY_ID = YOUR_AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY = YOUR_AWS_SECRET_ACCESS_KEY
+AWS_REGION = us-east-2
+AWS_BUCKET_NAME = bucket-of-photo
