--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "description": "pet project",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.859.0",
+    "@aws-sdk/s3-request-presigner": "^3.859.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.12.2",
+    "multer": "^2.0.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.18",
     "@types/winston": "^2.4.4",
     "dotenv": "^17.2.0",
